--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
