--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,8 @@
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
+    },
+    "rules": {
+        "no-use-before-define": "off"
     }
 }
