Database configuration variables
Loaded all variables needed to connect database

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-use-before-define": "off"
+        "no-use-before-define": "off",
+        "camelcase": "off",
+        "no-return-await": "off"
     }
 }
