Build setting and fix start script
Fixed start script and added a build script to start server.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "sucrase-node src/server.js"
+    "build": "sucrase ./src -d ./dist --transformd imports",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
