--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,12 @@
         "browser": true,
         "es2021": true
     },
+    "plugins": [
+        "jest"
+    ],
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:jest/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 12,
@@ -13,6 +17,11 @@
     "rules": {
         "no-use-before-define": "off",
         "camelcase": "off",
-        "no-return-await": "off"
+        "no-return-await": "off",
+        "jest/no-disabled-tests": "warn",
+        "jest/no-focused-tests": "error",
+        "jest/no-identical-title": "error",
+        "jest/prefer-to-have-length": "warn",
+        "jest/valid-expect": "error"
     }
 }
