--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "NODE_ENV=dev nodemon src/server.js",
     "build": "sucrase ./src -d ./dist --transforms imports; sequelize db:migrate",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -20,11 +23,17 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
+    "@sucrase/jest-plugin": "^2.0.0",
+    "@types/jest": "^26.0.22",
+    "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.4",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0",
-    "sucrase": "^3.17.1"
+    "sqlite3": "^5.0.2",
+    "sucrase": "^3.17.1",
+    "supertest": "^6.1.3"
   }
 }
