Auth util for tests
Added auth util to simulate api validation in tests

--- a/.env.test
+++ b/.env.test
@@ -8,3 +8,8 @@ GITHUB_CLIENT_SECRET=****************************************
 # Database
 
 DATABASE_DIALECT=sqlite
+
+# Test
+
+USER_ID=40186386
+REPOSITORY_ID=103633984
